app-test/testdata/typesystem/neg/pattern-matching-alternative-expression-type/check/patmat.check
Error in "testdata/typesystem/neg/pattern-matching-alternative-expression-type/src/patmat.cal" on line 6:
                case a of
                ^^^^^^^^^
                    1 : true end // error
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
                    _ : 0 end
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
                end;
^^^^^^^^^^^^^^^^^^^
Incompatible types; expected int but was <top>.